--- a/index.html
+++ b/index.html
@@ -639,6 +639,8 @@
     margin-bottom: 1.2rem;
     box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
     transition: transform 0.2s ease, box-shadow 0.2s ease;
+    text-decoration: none;
+    color: inherit;
   }
 
   .news-item:hover {
@@ -655,7 +657,7 @@
   }
 
   .news-item h4 {
-    margin-bottom: 0.25rem;
+    margin-bottom: 0;
     font-size: 1.05rem;
   }
 
@@ -793,7 +795,7 @@
     }
 
     .news-item img {
-      width: 55%;
+      width: 100%;
       height: auto;
       margin-bottom: 0.85rem;
     }
@@ -1016,14 +1018,13 @@
 
 					<div id="page-4" class="page four">
 						<h2 class="heading">News</h2>
-		<div class="news-item ftco-animate">
-			<img src="images/HYU_logo_singlecolor_png.png" alt="Hanyang University seal">
-			<div>
-				<span class="date">Mar. 1, 2026</span>
-				<h4>Appointed Assistant Professor at Hanyang University</h4>
-				<p>As of March 1, 2026, I have been appointed an Assistant Professor at Hanyang University ERICA. With IDEA LAB now officially established on campus, I will expand AI-powered design research for a variety of engineering applications.</p>
-			</div>
+	<a class="news-item ftco-animate" href="news-hanyang-appointment.html">
+		<img src="images/HYU_logo_singlecolor_png.png" alt="Hanyang University seal">
+		<div>
+			<span class="date">Mar. 1, 2026</span>
+			<h4>Appointed Assistant Professor at Hanyang University</h4>
 		</div>
+	</a>
 	<div class="mt-3 text-center">
 		<a href="news.html" class="btn btn-primary btn-sm">View all news</a>
 	</div>
