--- a/join-us.html
+++ b/join-us.html
@@ -265,9 +265,9 @@
 
   <section class="ftco-section bg-light" id="join-section">
     <div class="container">
-      <div class="ftco-animate text-center mb-4">
-        <img src="images/Recruiting_crop.png" alt="Recruiting new members" class="join-hero-img img-fluid">
-      </div>
+<!--      <div class="ftco-animate text-center mb-4">-->
+<!--        <img src="images/Recruiting_crop.png" alt="Recruiting new members" class="join-hero-img img-fluid">-->
+<!--      </div>-->
       <div class="row justify-content-center mb-4">
         <div class="col-md-9 heading-section text-center ftco-animate">
           <span class="subheading">Join Us</span>
