--- a/research.html
+++ b/research.html
@@ -360,6 +360,10 @@
         font-size: 1.7rem;
       }
 
+      .hero-statement {
+        font-size: 1rem !important;
+      }
+
       .component-grid {
         grid-template-columns: 1fr;
       }
@@ -431,7 +435,7 @@
           <div class="component-card ftco-animate">
             <span class="component-number">4</span>
             <h4>Generative Design</h4>
-            <p>AI <strong>creates and tests numerous novel design candidates</strong>, enabling efficient discovery of high-performing designs.</p>
+            <p>AI <strong>suggests numerous novel design candidates</strong>, enabling efficient discovery of high-performing designs.</p>
           </div>
         </div>
       </div>
