--- a/news.html
+++ b/news.html
@@ -114,8 +114,8 @@
     }
 
     .news-item img {
-      width: 140px;
-      height: auto;
+      width: 90px;
+      height: 90px;
       border-radius: 10px;
       object-fit: cover;
     }
